// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead two no pic and two - small 1`] = `
<View>
  <Text>
    lead-1
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    lead-2
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    support-1
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    support-2
  </Text>
</View>
`;

exports[`2. lead two no pic and two - medium 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 20,
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <Text>
      lead-1
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      lead-2
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <Text>
      support-1
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-2
    </Text>
  </View>
</View>
`;
